# er

./: .gitmodules  Cargo.toml  build.sh  readme.md  setup.sh  todo.txt
src/: adb.rs  autocomplete.rs  burrowing.rs  cli.rs  config.rs  find.rs  main.rs  xkeyboard.rs
