[package]
name = "er"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# cargo add serde -F serde/derive

[dependencies]
colored = "2.0.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
shell_completion = { path = "shell_completion/shell_completion" }
